k8s/10_network_policy/network-policy-demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-demo
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: destination-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: source-app
---
apiVersion: v1
kind: Service
metadata:
  name: destination-service
  labels:
    app: destination-app
spec:
  selector:
    app: destination-app
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: destination-pod
  labels:
    app: destination-app
spec:
  containers:
    - name: destination-container
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: source-pod
  labels:
    app: source-app
spec:
  containers:
    - name: source-container
      image: curlimages/curl
      command:
        [
          "/bin/sh",
          "-c",
          "while curl http://destination-service; do echo 'pod is accessible' >> /output.txt; sleep 10s; done",
        ]
