k8s/10_network_policy/nwpolicy-allow-all-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwpolicy-allow-all-egress
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - {}
