k8s/10_network_policy/nwpolicy-allow-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwpolicy-allow-all-ingress
spec:
  policyTypes:
    - ingress
  podSelector: {}
  ingress:
    - {}
