k8s/10_network_policy/nwpolicy-deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nwpolicy-deny-all-ingress
spec:
  policyTypes:
    - Ingress
  podSelector: {}
---
apiVersion: v1
kind: Pod
metadata:
  name: source-pod
  labels:
    app: source-app
spec:
  containers:
    - name: source-container
      image: curlimages/curl
      command:
        [
          "/bin/sh",
          "-c",
          "while curl http://destination-service; do echo 'destination-service accessible' >> /tmp/log/output.txt 2>&1; sleep 5s; done",
        ]
      volumeMounts:
        - name: service-accessibility-log
          mountPath: /tmp/log/
  volumes:
    - name: service-accessibility-log
      emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: destination-service
spec:
  type: ClusterIP
  selector:
    app: destination-app
  ports:
    - port: 80
      protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: destination-pod
  labels:
    app: destination-app
spec:
  containers:
    - name: destination-container
      image: nginx
      ports:
        - containerPort: 80
          protocol: TCP
